rustcc/tests/input/Lexer/invalid/backtick.c
// RUN: ${{rustcc}}

/* A backtick is not a valid token. */
`